# ROBO-FEUP

./: README.md
Project2/: README.md
Project2/src/simple_reactive_robot/src/: simple_reactive_robot.cpp
Project2/stdr_files/stdr_launchers/launch/: simple-reactive-robot.launch
Project2/stdr_files/stdr_resources/maps/: map2.yaml
Project3&4/: README.md
Project3&4/launch_files/: simple_wall.launch  simple_world.launch
Project3&4/models/simple_wall/Wall1/: model.config  model.sdf
Project3&4/src/simple_reactive_robot/: CMakeLists.txt  package.xml
Project3&4/src/simple_reactive_robot/src/: line_following.cpp  line_following.hpp  main.cpp  object_following.cpp  simple_reactive_robot.cpp  simple_reactive_robot.h  simple_reactive_robot.hpp  utils.cpp  utils.hpp  wall_following.cpp  wall_following.h  wall_following.hpp
Project3&4/worlds/: simple_wall.sdf
simple_reactive_robot/: CMakeLists.txt  package.xml
src/simple_reactive_robot/: CMakeLists.txt  package.xml
src/simple_reactive_robot/src/: hello.cpp  simple_reactive_robot.cpp
stdr_files/stdr_launchers/launch/: simple-reactive-robot2.launch  simple-reactive-robot3.launch  simple_reactive_robot.launch
stdr_files/stdr_resources/maps/: map1.yaml  map3.yaml
stdr_files/stdr_resources/resources/robots/: simple_reactive_robot.yaml
