<?xml  version ="1.0"?>
<package>
  <name>simple_reactive_robot</name>
  <version>0.0.1</version>
  <description>
    Simple Reactive Robot for ROBO
  </description>
  <maintainer  email="up201406136@fe.up.pt">
    Sérgio Salgado
  </maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>cv_bridge</run_depend>
</package>